--- a/emencia/templates/newsletter/newsletter_statistics.html
+++ b/emencia/templates/newsletter/newsletter_statistics.html
@@ -5,7 +5,7 @@
 
 {% block bodyclass %}dashboard{% endblock %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% load adminmedia %}{% admin_media_prefix %}css/dashboard.css" />{% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}admin/css/dashboard.css" />{% endblock %}
 
 {% block extrahead %}
 <script type="text/javascript" src="{{ STATIC_URL }}edn/js/jquery.js"></script>
